--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <!-- Map container -->
             <div id="basque-map-container">
                     <h3 data-key="mapa_titulo">Mapa</h3>
-                    <iframe id="google-map-embed-basque" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
+                    <iframe id="google-map-embed-basque" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
                 </div>
             <!-- Table container -->
             <table id="basque-table" class="pintxos-table"></table>
@@ -318,8 +318,8 @@
             <hr>
             <!-- Map container -->
             <div id="michelin-map-container">
-                    <h3 data-key="mapa_titulo">Mapa</h3>
-                    <iframe id="google-map-embed-michelin" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
+                    <h3>Mapa</h3>
+                    <iframe id="google-map-embed-michelin" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
                 </div>
             <!-- Table container -->
             <table id="michelin-table" class="pintxos-table"></table>
