fix table padding

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <table id="pintxos-table" class="pintxos-table"></table>
         </div>
         <!-- ===================== BASQUE SCREEN ===================== -->
-        <div id="basque-screen" class="screen">
+        <div id="basque-screen" class="screen" padding="0px">
             <div class="header-row">
                 <button class="back-btn" onclick="showTab('restaurants')">
                     <span class="arrow-icon">⬅</span> <span data-key="btn_atras"></span>
@@ -337,7 +337,7 @@
             <!-- Map container -->
             <div id="txuleta-map-container">
                     <h3 data-key="mapa_titulo">Mapa</h3>
-                    <iframe id="google-map-embed-txuleta" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
+                    <iframe id="google-map-embed-txuleta" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
                 </div>
             <!-- Table container -->
             <table id="txuleta-table" class="pintxos-table"></table>
