--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     <img src="images/ic_beyond.png" class="btn-icon-large" alt="icon">
                     <span data-key="btn_act_3">Actividad 3</span>
                 </button>
-                <button class="menu-btn" onclick="showTipDetail('consejos', 'btn_menu_consejos', 'activities')">
+                <button class="menu-btn" onclick="showActivityDetail('4')">
                     <img src="images/ic_tips.png" class="btn-icon-large" alt="icon">
                     <span data-key="btn_menu_consejos">Consejos</span>
                 </button>
@@ -415,15 +415,15 @@
                     <p data-key="act_3_desc2">one day plans (zumaia, onyarbi), gaztelugatxe, Bilbo,bodegas, caserio </p>
                 </div>
             </div>
-        </div>
-        <div id="info-consejos" class="sub-section" style="display: none;">
-            <div class="text-frame">
-                <h3 data-key="titulo_tips"></h3>
-                <ul>
-                   <li data-key="tip_1">Tip 1</li>
-                   <li data-key="tip_2">Tip 2</li>
-                   <li data-key="tip_3">Tip 3</li>
-               </ul>
+            <div id="act-4" class="sub-section" style="display: none;">
+                <div class="text-frame">
+                    <h3 data-key="titulo_tips"></h3>
+                    <ul>
+                       <li data-key="tip_1">Tip 1</li>
+                       <li data-key="tip_2">Tip 2</li>
+                       <li data-key="tip_3">Tip 3</li>
+                   </ul>
+                </div>
             </div>
         </div>
 
